--- a/res/layout/activity_add_alarm.xml
+++ b/res/layout/activity_add_alarm.xml
@@ -1,13 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#D3D3D3"
-    tools:context="kr.necbong.nalcbong.AddAlarmActivity">
+    android:orientation="vertical"
+    android:background="#D3D3D3">
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="top"
+        android:background="#fbfbfb">
+
+        <TextView
+            android:id="@+id/save_alarm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="12dip"
+            android:layout_marginTop="12dip"
+            android:textColor="#4B87CB"
+            android:textSize="16dip"
+            android:text="저장"/>
+
+        <TextView
+            android:id="@+id/cancel_alarm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/save_alarm"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="12dip"
+            android:layout_marginTop="12dip"
+            android:textColor="#4B87CB"
+            android:textSize="16dip"
+            android:text="취소"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical">
+
+        <TimePicker
+            android:id="@+id/time_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </TimePicker>
+
+    </RelativeLayout>
+</LinearLayout>
